# Yazilim_Yukleme_Yazilimi

./: CMakeLists.txt  Main.qml  README.md  main.cpp  pinghelper.cpp  pinghelper.h  sshhelper.cpp  sshhelper.h
translations/: yazilim_yukleme_en.qm  yazilim_yukleme_en.ts
